# bits

./: .clippy.toml  .env.example  .gitignore  .graphqlrc.toml  .graphqlrc.yaml  .npmrc  .rustfmt.toml  .sqlfluff  .squawk.toml  Cargo.toml  Dockerfile  README.md  compose.yaml  config.yaml  deno.json  docker-compose.yml  import_map.json  package.json  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
.docker/: Dockerfile  docker-compose.yml
.hasura/: actions.graphql  actions.yaml
docs/: datamodel.sql  es.sql  schema.gql  schema.sql  schema.txt  seed.sql
docs/adr/: 00-why-not-relay.md  01-custom-mutations.md  01-use-custom-mutations.md
docs/schema/: 40_permissions.sql  60_policies.sql  80_functions.sql  checks.sql  domains.sql  enums.sql  handlers.sql  permissions.sql  policies.sql  roles.sql  schema.sql  schemas.sql  tables.sql  triggers.sql  utilities.sql  views.sql
docs/schema/auth/: auth_enums.sql  auth_perms.sql  auth_tables.sql  person.sql
scripts/: Cargo.toml  codegen.sh  db-dump.sh  db-load-extensions.sh  db-load-extensions.sql  db-migrate.sh  db-seed-bid-too-late.sh  db-seed-expired-auctions.sh  db-seed.sh  dbdiff.sh  dbseed.sh  gql-dump.sh  requirements.txt  seed.sql  sort_derives.py  sql-check.sh  sql-dump.sh  task.rs  version.sh
scripts/data/: events.json
tasks/: Cargo.toml  bin.rs  codegen.sh  db-migrate.sh  db-seed.sh  dbdiff.sh  generate.sh  gql-introspect.sh  introspect.sh  main.rs  migrate.sh  orm-generate.sh  playground.sh  seed.json  seed.ndjson  seed.sh  seed.sql  sql-check.sh  sqlcheck.sh  sqlfix.sh  version.sh
(+33 files in other folders)
