# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["packages/*", "scripts"]
resolver = "2"

[workspace.dependencies]
async-graphql = { version = "6.0.7", features = ["chrono", "decimal", "uuid", "dataloader", "dynamic-schema"] }
serde = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
